tests/NormalTests/paczka1/small_fuzzy/47897771.err
Error in line 1: lCB77uZHmC S226 16,7
Error in line 3: lCB77uZHmC A230 29,4
Error in line 4: 6re8q A230 13,4
Error in line 11: lCB77uZHmC S34 2,2
